[tool.poetry]
name = "lmsapi-docs"
version = "0.1.0"
description = "Project documentation for lmsapi."
authors = ["Luke Holmes <lukeholmes17@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
